# QAnalySeriesWASM

./: CMakeLists.txt  LICENSE  README.md  correlation.cpp  correlation.h  correlation.ui  dataproc.cpp  dataproc.h  dataproc.ui  etp.cpp  etp.h  etp.ui  globals.cpp  globals.h  insolation.cpp  insolation.h  insolation.ui  laskar.cpp  laskar.h  laskar.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  math1.cpp  myMath.h  mynr.cpp  mynr.h  qcustomplot.cpp  qcustomplot.h  qhtml5file.cpp  qhtml5file.h  qhtml5file_html5.cpp  qtwebutils.cpp  readcsv.cpp  readcsv.h  readcsv.ui  sedrate.cpp  sedrate.h  sedrate.ui  (+12 more)
Resources/: La2004ecc.txt  La2004obl.txt  La2004pibar.txt  La2011ecc.txt  data_ex0.txt  data_ex1.txt  data_ex2.txt  exampleProject.qaproj  laskarNew.sqbpro  myQAProject.qaproj  myQAProject2.qaproj  newDataAged.txt  newDataAged5.txt  target_ex0.txt  target_ex1.txt  tmodel_ex0.txt  tmodel_ex1.txt  tmodel_ex2.txt
icons/: QAnalySeries.icns
